@@ -1,3 +1,13 @@
+2013-02-02  Patrick Gansterer  <paroga@webkit.org>
+
+        [CMake] Adopt the WinCE port to new CMake
+        https://bugs.webkit.org/show_bug.cgi?id=108754
+
+        Reviewed by Laszlo Gombos.
+
+        * WinCELauncher/CMakeLists.txt: Mark WinCELauncher
+        as WIN32 target to use the correct entry point.
+
 2013-02-02  Alexey Proskuryakov  <ap@apple.com>
 
         One is not allowed to use commit-queue to make oneself a committer.
