@@ -1,3 +1,15 @@
+2013-02-02  Patrick Gansterer  <paroga@webkit.org>
+
+        [CMake] Adopt the WinCE port to new CMake
+        https://bugs.webkit.org/show_bug.cgi?id=108754
+
+        Reviewed by Laszlo Gombos.
+
+        Remove the entry point hack which isn't required in the new
+        CMake version with offical WindowsCE support.
+
+        * Source/cmake/OptionsWindows.cmake:
+
 2013-02-01  Benjamin Poulain  <bpoulain@apple.com>
 
         Clean the String->AtomicString conversion for AnimationController::pauseAnimationAtTime
